# GeoJsonDemo

DCNCLandmark/DcncServer/: CMakeLists.txt  ClassifyService.thrift  Dockerfile  README.md  libs.sh
DCNCLandmark/DcncServer/CaffeClassifyServer/: CaffeClassify.cpp  CaffeClassify.h  DcncAlign.cpp  DcncAlign.hpp  Dispatcher.cpp  Dispatcher.hpp  Landmaker.cpp  Landmaker.hpp  face_alignment.cpp  face_alignment.hpp  helper.h  main.cpp
DCNCLandmark/DcncServer/CaffeClassifyServer.xcodeproj/: project.pbxproj
DCNCLandmark/DcncServer/CaffeClassifyServer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
DCNCLandmark/DcncServer/CaffeClassifyServer.xcodeproj/project.xcworkspace/xcuserdata/betty.xcuserdatad/: UserInterfaceState.xcuserstate
DCNCLandmark/DcncServer/CaffeClassifyServer.xcodeproj/project.xcworkspace/xcuserdata/mrwang.xcuserdatad/: UserInterfaceState.xcuserstate
DCNCLandmark/DcncServer/CaffeClassifyServer.xcodeproj/xcuserdata/betty.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
DCNCLandmark/DcncServer/CaffeClassifyServer.xcodeproj/xcuserdata/betty.xcuserdatad/xcschemes/: CaffeClassifyServer.xcscheme  xcschememanagement.plist
DCNCLandmark/DcncServer/src/: CaffeClassify.cpp  CaffeClassify.h  Server.cpp  Server.h  comm.cpp  comm.hpp  cryptopp.cpp  cryptopp.h  getarg.h  gif2jpg.cpp  gif2jpg.h  main.cpp  version.hpp
DCNCLandmark/DcncServer/src/Service/: ClassifyService_constants.cpp  ClassifyService_constants.h  ClassifyService_types.cpp  ClassifyService_types.h  Service.cpp  Service.h
(+3 files in other folders)
